--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,278 @@ body {
   --secondary-Very-Dark-Desaturated-Violet: hsl(271, 36%, 24%);
   --secondary-Very-Light-Magenta: hsl(289, 100%, 72%);
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: var(--secondary-Light-Grayish-Violet);
+}
+
+.back-purple {
+  position: absolute;
+  top: 0;
+  left: -10%;
+  border-radius:  0% 0% 50% 50%;
+  width: 40%;
+  height: 90%;
+  background: linear-gradient(
+    var(--gradient-Light-Magenta),
+    var(--gradient-Light-Violet));
+  );
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  align-items: center;
+  gap: 120px;
+  margin-bottom: 150px;
+  margin-top: 120px;
+  margin-left: 120px;
+  z-index: 1;
+}
+
+/* Phone */
+
+.phone-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  border: 10px solid white;
+  border-radius: 30px;
+  position: relative;
+}
+
+.white-space{position: absolute;
+  width: 160px; 
+  height: 20px;
+  background: white;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-radius: 0px 0px 15px 15px;
+  }
+
+/* user-container */
+
+.user-container {
+  width: 100%;
+  height: 70px;
+  background: linear-gradient(
+    90deg,
+    var(--gradient-Light-Violet),
+    var(--gradient-Light-Magenta)
+  );
+  display: flex;
+  align-items: center;
+  border-radius: 20px 20px 0 0;
+  padding-top: 20px;
+}
+
+.user-info {
+  width: 65%;
+}
+
+.left-arrow {
+  width: 10px;
+  margin-left: 15px;
+  opacity: 80%;
+}
+
+.dots-icon {
+  width: 4px;
+  opacity: 70%;
+}
+
+.avatar {
+  width: 25px;
+  height: 25px;
+  border: 2px solid rgb(185, 185, 185);
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+.username {
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: white;
+  opacity: 70%;
+}
+
+.available {
+  font-size: 0.6rem;
+  font-weight: 200;
+  color: white;
+  opacity: 50%;
+}
+
+/*Text chat container */
+
+.dog-images {
+  display: flex;
+  justify-content: end;
+}
+
+.dog-img {
+  width: 20%;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+.chat-container {
+  font-size: 0.6rem;
+  line-height: 1.5;
+  background: var(--secondary-Light-Grayish-Violet);
+  padding: 10px;
+  border-radius: 0 0 20px 20px;
+  height: cover;
+}
+
+.left-discussion {
+  margin-bottom: 10px;
+  width: 60%;
+  height: cover;
+  border-radius: 10px;
+  color: var(--main-Moderate-Violet);
+  background-color: hsl(276, 100%, 95%);
+  padding: 5px;
+  word-wrap: break-word;
+}
+
+.right-discussion-main {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-bottom: 10px;
+}
+
+.right-discussion {
+  display: flex;
+  align-items: center;
+  width: 60%;
+  height: cover;
+  text-align: start;
+  color: var(--main-Desaturated-Dark-Violet);
+  border-radius: 10px;
+  margin-top: 10px;
+  background-color: white;
+  padding: 5px;
+}
+
+.prices-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  margin-top: 10px;
+  border-radius: 15px 10px 10px 5px;
+  padding: 5px 5px;
+  background: linear-gradient(
+    90deg,
+    var(--gradient-Light-Magenta),
+    var(--gradient-Light-Violet)
+  );
+  color: white;
+}
+
+.time {
+  opacity: 60%;
+}
+
+.price {
+  opacity: 90%;
+}
+
+.radio-text {
+  display: flex;
+  gap: 5px;
+  padding: 5px;
+}
+
+input[type="radio"] {
+  opacity: 50%;
+}
+
+.placeholder {
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  border-radius: 20px;
+  padding-left: 10px;
+  border: none;
+}
+
+/* Right main content */
+
+.right-main-container {
+  width: 400px;
+  height: fit-content;
+  line-height: 1.5;
+}
+
+.right-title {
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.right-description {
+  opacity: 50%;
+}
+
+.attribution{
+  position: absolute;
+  bottom: 0;
+}
+
+/* media queries */
+
+@media screen and (max-width:820px) {
+
+  main{
+    width: 100%;
+    height: 100%;
+  }
+
+  .main-container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px ;
+    padding: 30px;
+    gap:60px
+  }
+
+  .back-purple{position: absolute;
+    height: 80%;
+    width: 100%;
+    margin-left: -200px;
+  }
+
+  .right-main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+
+  .right-title{
+    text-align: justify;
+    margin-bottom: 30px;
+    padding: 0%;
+  }
+
+  .right-description{
+    margin-bottom: 50px;
+  }
+  
+
+  .attribution{position: absolute;
+    bottom: -200px;
+  }
+}
