--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,8 @@ input[type="radio"] {
 
   .right-description{
     margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   
 
