--- a/styles.css
+++ b/styles.css
@@ -300,12 +300,11 @@ input[type="radio"] {
 
   .right-description{
     margin-bottom: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
+    padding: 30px;
   }
   
 
   .attribution{position: absolute;
-    bottom: -200px;
+    bottom: -380px;
   }
 }
