--- a/styles.css
+++ b/styles.css
@@ -300,11 +300,20 @@ input[type="radio"] {
 
   .right-description{
     margin-bottom: 50px;
-    padding: 30px;
   }
-  
 
   .attribution{position: absolute;
     bottom: -380px;
   }
 }
+
+  @media screen and (max-width:500px) {
+
+    .right-description{
+      margin-bottom: 50px;
+      padding: 30px;
+    }
+  }
+  
+
+
