--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,14 @@ input[type="radio"] {
   .back-purple{
     margin-left: -100px;
   }
+
+  .right-description{
+    margin-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+}
   
 
 
