--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,9 @@ main {
 .time {
   opacity: 60%;
   font-size: 0.5rem;
-  padding-left: 5px;
 }
+
+input{margin-right: 5px;}
 
 .price {
   opacity: 80%;
