--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,15 @@ main {
   );
 }
 
-  .back-pink {position: absolute;
-    bottom: 0;
-    left: 1100px;
-    border-radius: 400px 0px 0px;
-    width: 340px;
-    height: 80%;
-    background: var(--secondary-Very-Light-Magenta);
-    opacity: 10%;
-  }
+.back-pink {position: fixed;
+  bottom: 0;
+  left: 1100px;
+  border-radius: 400px 0px 0px;
+  width: 340px;
+  height: 80%;
+  background: var(--secondary-Very-Light-Magenta);
+  opacity: 5%;
+}
 
 .main-container {
   display: flex;
@@ -220,12 +220,6 @@ main {
   color: white;
 }
 
-.time {
-  opacity: 60%;
-  font-size: 0.5rem;
-}
-
-input{margin-right: 5px;}
 
 .price {
   opacity: 80%;
@@ -235,12 +229,37 @@ input{margin-right: 5px;}
 
 .radio-text {
   display: flex;
-  gap: 5px;
   padding: 5px;
 }
 
-input[type="radio"] {
+input[type="radio"]{
+  display: none ;
+}
+
+label{
+  display: flex;
+  width: cover;
+}
+
+label::before{
+  content: "";
+  height: 10px;
+  width: 10px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-right: 5px;
   opacity: 50%;
+}
+
+label[type="radio"]:checked + label{
+  background-color: white;
+}
+
+label[type="radio"]:checked + label::before{
+  height: 10px;
+  width: 10px;
+  border: 10px solid white;
+  background-color: transparent;
 }
 
 .placeholder {
@@ -252,6 +271,24 @@ input[type="radio"] {
   padding-left: 10px;
   border: none;
 }
+
+.placeholder-box{
+  position: relative;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  padding: 0px;}
+
+.send-button{
+  position: absolute;
+  right: 10px;
+  top: 15px;
+  width: 30px;
+  border: none;
+  border-radius: 50%;}
+
+
 
 /* Right main content */
 
