--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,6 @@ main {
 .prices-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   width: 70%;
   margin-top: 10px;
   border-radius: 15px 10px 10px 5px;
@@ -228,23 +227,70 @@ main {
 }
 
 .radio-text {
-  display: flex;
+  width: 150px;
   padding: 5px;
 }
 
+label {display: inline-block;
+position: relative;}
+
 input[type="radio"]{
-  display: none ;
+  display: none;
 }
 
 label{
   display: flex;
+  left: 20px;
+}
+
+span{
+  display: inline-block;
+  margin-right: 30px;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 1px solid white;
+  opacity: 60%;
+  display: block;
+  position: absolute;
+  left: -20px;
+  top: 0;
+}
+
+span:after{
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: white;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  border-radius: 50%;
+}
+
+label input[type="radio"]:checked ~ span:after{
+  transform: translate(-50%, -50%) scale(1);
+}
+
+
+
+
+
+/* label{
+  display: flex;
   width: cover;
+  position: relative;
 }
 
 label::before{
+  position: absolute;
+  display: block;
   content: "";
   height: 10px;
   width: 10px;
+  background-color: transparent;
   border: 1px solid white;
   border-radius: 50%;
   margin-right: 5px;
@@ -260,7 +306,7 @@ label[type="radio"]:checked + label::before{
   width: 10px;
   border: 10px solid white;
   background-color: transparent;
-}
+} */
 
 .placeholder {
   align-items: center;
